dx-workshop/app/main/default/objects/TriggerHandler__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes whether or not this Handler is active</description>
    <inlineHelpText>Denotes whether or not this Handler is active</inlineHelpText>
    <label>Active?</label>
    <type>Checkbox</type>
</CustomField>