dx-workshop/app/main/default/objects/TriggerHandler__mdt/fields/IsAfter__c.field-meta.xml
<CustomField>
    <fullName>IsAfter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes whether or not this Handler is enabled for After events</description>
    <inlineHelpText>Denotes whether or not this Handler is enabled for After events</inlineHelpText>
    <label>After Enabled</label>
    <type>Checkbox</type>
</CustomField>