dx-workshop/app/main/default/objects/TriggerHandler__mdt/fields/IsBefore__c.field-meta.xml
<CustomField>
    <fullName>IsBefore__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes whether or not this Handler is enabled for Before events</description>
    <inlineHelpText>Denotes whether or not this Handler is enabled for Before events</inlineHelpText>
    <label>Before Enabled</label>
    <type>Checkbox</type>
</CustomField>