dx-workshop/app/main/default/objects/TriggerHandler__mdt/fields/IsDelete__c.field-meta.xml
<CustomField>
    <fullName>IsDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes whether or not this Handler is enabled for Delete events</description>
    <inlineHelpText>Denotes whether or not this Handler is enabled for Delete events</inlineHelpText>
    <label>Delete Enabled</label>
    <type>Checkbox</type>
</CustomField>