dx-workshop/app/main/default/objects/TriggerHandler__mdt/fields/IsInsert__c.field-meta.xml
<CustomField>
    <fullName>IsInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes whether or not this Handler is enabled for Insert events</description>
    <inlineHelpText>Denotes whether or not this Handler is enabled for Insert events</inlineHelpText>
    <label>Insert Enabled</label>
    <type>Checkbox</type>
</CustomField>