dx-workshop/app/main/default/objects/TriggerHandler__mdt/fields/IsUndelete__c.field-meta.xml
<CustomField>
    <fullName>IsUndelete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes whether or not this Handler is enabled for Undelete events</description>
    <inlineHelpText>Denotes whether or not this Handler is enabled for Undelete events</inlineHelpText>
    <label>Undelete Enabled</label>
    <type>Checkbox</type>
</CustomField>