dx-workshop/app/main/default/objects/TriggerHandler__mdt/fields/IsUpdate__c.field-meta.xml
<CustomField>
    <fullName>IsUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes whether or not this Handler is enabled for Update events</description>
    <inlineHelpText>Denotes whether or not this Handler is enabled for Update events</inlineHelpText>
    <label>Update Enabled</label>
    <type>Checkbox</type>
</CustomField>