dx-workshop/app/main/default/objects/TriggerHandler__mdt/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <defaultValue>999</defaultValue>
    <description>Determines in what order this Handler should be processed in relation to other Handlers on this object</description>
    <inlineHelpText>Determines in what order this Handler should be processed in relation to other Handlers on this object</inlineHelpText>
    <label>Priority</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>