dx-workshop/app/main/default/objects/TriggerHandler__mdt/fields/SObject__c.field-meta.xml
<CustomField>
    <fullName>SObject__c</fullName>
    <description>The SObject that this handler should run on</description>
    <inlineHelpText>The SObject that this handler should run on</inlineHelpText>
    <label>SObject</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Trigger Handlers</relationshipLabel>
    <relationshipName>TriggerHandlers</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>